<resources>
    <string name="app_name">RadioRecord</string>
    <string name="saved_directory_title">Folder for saving audio</string>
    <string name="quality_title">Select Default Quality</string>
    <string name="quality_aac">Low (AAC, 32kbs)</string>
    <string name="quality_low">Low (MP3, 32kbs)</string>
    <string name="quality_medium_aac">Medium (AAC, 64kbs)</string>
    <string name="quality_medium">Medium (MP3, 128kbs)</string>
    <string name="quality_high">High (MP3, 320kbs)</string>
    <string name="dont_ask_again">Don\'t ask again</string>
    <string name="error_connect">Failed to connect to audio server. Please check your connection and try again.</string>
    <string name="error_not_found">Can\'t find this song on server. Please select another one.</string>
    <string name="connecting">Connecting...</string>
    <string name="message_connecting">Connecting to server...</string>
    <string name="settings_text">Settings</string>
    <string name="menu_main_text">Radio stations</string>
    <string name="menu_downloads_text">Downloaded</string>
    <string name="settings_iap_text">Donate</string>
    <string name="menu_history_text">History</string>
    <string name="menu_top_text">Top 100</string>
    <string name="menu_superchart_text" translatable="false">Superchart</string>
    <string name="menu_megamix_text" translatable="false">Record Megamix</string>
    <string name="menu_hrustalev_text" translatable="false">Кремов и Хрусталев</string>
    <string name="menu_new_text">New Record</string>
    <string name="menu_player_text">Player</string>
    <string name="feedback_text">Send feedback</string>
    <string name="no_default_quality">Always ask</string>
    <string name="setting_quality_text">Live playback quality</string>
    <string name="setting_download_text">Download directory</string>
    <string name="music_metadata_text">Music metadata</string>
    <string name="image_metadata_text">Album images</string>
    <string name="save_battery_text">Save battery</string>
    <string name="auto_pause_text">Pause during system sound</string>
    <string name="on_call_text">Stop playback on call</string>
    <string name="eq_settings_text">Equalizer</string>
    <string name="music_metadata_secondary">Load current music information (Artist, song name)</string>
    <string name="image_metadata_secondary">Load and display album image (if available)</string>
    <string name="save_battery_secondary">Do not update song name and album image when screen off</string>
    <string name="auto_pause_secondary">Playback will be pause on call, notifications, sms, etc</string>
    <string name="on_call_secondary">Automatically interrupt playback on income call</string>
    <string name="eq_settings_secondary">Disable this option if you have problems with sound</string>
    <string name="no_results">Playlist is empty</string>
    <string name="no_content_text">No results</string>
    <string name="error_load_category">Failed to load data from server. Please check your connection or try later.</string>
    <string name="message_loading">Loading</string>
    <string name="message_loading_category">Loading category</string>
    <string name="message_loading_music">Loading music list</string>
    <string name="message_preparing">Preparing parser</string>
    <string name="message_search_entries">Searching entries...</string>
    <string name="message_parsing_progres">Parsing %1$d of %2$d</string>
    <string name="message_parsing_summary">Success: %1$d, failed: %2$d</string>
    <string name="message_failed_category">Failed to obtain category address</string>
    <string name="artist_stub">Unknown artist</string>
    <string name="song_name_stub">Unknown song name</string>
    <string name="menu_sort_up">From new to old</string>
    <string name="menu_sort_abc">Sort by name AZ</string>
    <string name="menu_sort_cba">Sort by name ZA</string>
    <string name="menu_download">Download</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_play">Play selected</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_select_none">Clear selection</string>
    <string name="selection_title" formatted="false">%d/%d selected</string>
    <string name="menu_sort_down">From old to new</string>
    <string name="menu_show_items">Show all items</string>
    <string name="menu_hide_items">Hide music without name</string>
    <string name="clipboard_label">Record song name</string>
    <string name="clipboard_success">Title copied to clipboard</string>
    <string name="clipboeard_error">Failed to copy title to clipboard</string>
    <string name="text_no_downloads">No audio saved. Please select some from categories History, New record, Record
        Megamix, Top 100 or Superchart
    </string>
    <string name="default_move_status">Moving audio files to new folder. Please don\'t kill application till the end of
        operation.
    </string>
    <string name="directory_access_error">Can\'t access this directory. Please check audio path.</string>
    <string name="error_empty_selection">No items selected</string>
    <string name="status_audio_none">Pending</string>
    <string name="status_audio_downloading">Downloading</string>
    <string name="status_audio_downloaded">Ready</string>
    <string name="status_error_url">File is missing on server</string>
    <string name="status_error_file">Can\'t get access to destination folder, please check storage.</string>
    <string name="status_error_saving">Can\'t save audio. Please check free space and storage accessibility</string>
    <string name="error_source">Unsupported source format</string>
    <string name="error_not_downloaded">Some media was skipped - not downloaded</string>
    <string name="donate_text">\tHello!\n\tHope you have a good day. This application is fully free. And all features are available for all users.
        So, if you like <b>Radio Record</b> and want to support project - press that button below :). Sor sure this will motivate for new awesome releases
        and new cool features you asking. Thanks for being with us.
        \n\tSincerely,\n\tDevelopers Team
    </string>
    <string name="donate_small">Donate 1$</string>
    <string name="donate_medium">Donate 5$</string>
    <string name="donate_large">Donate 25$</string>
    <string name="subscribe_small">Subscribe 1$/m</string>
    <string name="subscribe_medium">Subscribe 2$/m</string>
    <string name="subscribe_large">Subscribe 5$/m</string>
    <string name="erro_no_iap_service">Google payment service cannot be located on device</string>
    <string name="error_iap_purchase">This purchase cannot be performed. Please try later</string>
    <string name="error_iap_open">Cannot open Google payment service</string>
    <string name="error_iap_remote">Failed to connect to Google payment service. Please try later</string>
    <string name="iap_thanks">Thanks for your support!</string>
    <string name="error_iap_support">Google payment service not supported</string>
    <string name="download_starting">Audio added to downloads</string>
    <string name="status_error_unknown">Unknown error happened while downloading attempt</string>
    <string name="message_eq_not_ready">Equalizer not initialized yet</string>
    <string name="eq_change_message">Please restart playback to apply changes</string>
    <string name="warning_text">Warning</string>
    <string name="sleep_timer_title">Sleep timer</string>
    <string name="sleep_timer_description">Setup automatic stop of playback in give time</string>
    <string name="eq_warning_text">Equalizer is not available at the moment. Please check if it is enabled in applications settings and try again.
        Equalizer is also not available till first audio playback. If problem persists - your device might be not supported.
    </string>
    <string name="button_internal">Internal</string>
    <string name="button_sd_card" translatable="false">SD-card</string>
    <string name="undownloadable_audio">Can\'t download this audio. Please go to categories History, Record Megamix, Top
        100, Superchart or New Record.
    </string>
    <string name="permission_guide">Please submit permission request and try again.</string>
    <string name="playlist_title">Playlist</string>
    <string name="equalizer_dialog_title">Equalizer</string>
    <string name="no_preset">Manual</string>
    <string name="message_no_selected">Please select something</string>
    <string name="sleep_mode_off">off</string>
    <string name="sleep_mode_elapsed">in %1$02dh %2$02dm</string>
    <string name="sleep_mode_elapsed_hours">in %1$dh</string>
    <string name="sleep_mode_elapsed_minutes">in %1$dm</string>
    <string name="sleep_mode_chosen">at %1$02d:%2$02d</string>
    <string name="sleep_in_hint">sleep in %1$02dh %2$02dm</string>
    <string name="sleep_timer_canceled">Sleep timer is canceled</string>
    <string name="sleep_timer_toast">Sleep timer is now suspending playback</string>
    <string name="audio_effect_error">AudioEffect library is corrupted. Disabling equalizer.</string>
    <string name="settings_theme_text">Application theme</string>
    <string name="dark_theme_name">Dark theme (NEW)</string>
    <string name="classic_theme_name">Classic</string>
    <string name="light_theme_name">Light theme</string>
    <string name="ad_main_screen" translatable="false">ca-app-pub-8716939423875482/9795752054</string>
    <string name="ad_player_screen" translatable="false">ca-app-pub-8716939423875482/5225951651</string>
    <string name="settings_ads_text">Ads</string>
    <string name="ad_status_enabled">Enabled</string>
    <string name="ad_status_disabled">Disabled</string>
    <string name="ads_dialog_title">Ads policy</string>
    <string name="ads_dialog_description">Please enable ads to support application. Ads and donation help to promote
        this application and keep working on it. We are promise:\n\nOnly unostentatious ads. We are not showing
        full-screen ads that case bad user experience.\n\nOnly wifi. We will block any ads request during mobile
        connection, so you will not be charged extra.\n\nEnjoy!
    </string>
    <string name="text_disable">Disable</string>
    <string name="record_info_text">Record option only available for online stream. For other categories History, Top
        100, etc please use download button
    </string>
    <string name="recording_starting_info">File %1$s is starting now. You can check it in Downloads section.</string>
    <string name="recording_stopped_info">Recording is stopped.</string>
    <string name="settings_iap_secondary">This motivates developer to work on new release</string>
    <string name="text_send">Send</string>
    <string name="message_studio_title">Message to Record studio</string>
    <string name="menu_message_studio_text">Message to studio</string>
    <string name="error_recording">Cannot create file for saving record. Please check write permission to destination folder.</string>
    <string name="message_studio_succes">Your message was send successfully.</string>
    <string name="message_studio_error">Failed to send message</string>
    <string name="phone_hint">Your phone number %1$s will be send to server to identify you as message owner.</string>
    <string name="hint_phone_number">phone number</string>
    <string name="hint_message">message</string>
    <string name="warning_empty_message">Please enter your message</string>
    <string name="warning_empty_phone">Please enter your phone number</string>
    <string name="large_buttons_text">Tablet mode</string>
    <string name="large_buttons_secondary">Increase buttons on the player screen</string>
    <string name="eq_not_available">Unfortunately your device is not support this feature</string>
    <string name="message_loaded_from_cache">Loaded from cache (%1$s)</string>
</resources>