<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        style="@style/DialogContainer">

    <TextView
            android:text="@string/warning_text"
            style="@style/DialogTitle"/>

    <View style="@style/DialogTitleSeparator"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/eq_warning_text"
            android:layout_margin="@dimen/main_padding" />

    <View
            android:layout_width="match_parent" android:layout_height="1px"
            android:background="@color/station_color"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                style="@style/DialogButton"
                android:layout_toLeftOf="@+id/cancel"
                android:text="@string/settings_text"/>
        <Button
                android:id="@id/cancel"
                android:layout_width="wrap_content"
                style="@style/DialogButton"
                android:layout_alignParentRight="true"
                android:text="@android:string/cancel"/>
    </RelativeLayout>

</LinearLayout>