<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        style="@style/DialogContainer">

    <TextView
            android:text="@string/ads_dialog_title"
            style="@style/DialogTitle"/>

    <View style="@style/DialogTitleSeparator"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/ads_dialog_description"
            android:layout_margin="@dimen/main_padding" />

    <View
            android:layout_width="match_parent" android:layout_height="1px"
            android:background="@color/station_color"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:id="@+id/enable"
                android:layout_width="wrap_content"
                style="@style/DialogButton"
                android:layout_alignParentRight="true"
                android:textColor="?attr/settings_text_primary"
                android:text="@android:string/ok"/>

        <Button
                android:id="@+id/disable"
                android:layout_width="wrap_content"
                style="@style/DialogButton"
                android:layout_toLeftOf="@id/enable"
                android:textColor="?attr/settings_text_secondary"
                android:text="@string/text_disable"/>
    </RelativeLayout>

</LinearLayout>