<android.support.v4.widget.DrawerLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/drawer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/primary_background">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <include layout="@layout/toolbar"/>

        <FrameLayout android:layout_width="match_parent" android:layout_height="match_parent">

            <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="16dp"
                            android:textSize="16sp"
                            android:text="@string/donate_text"/>

                    <Button
                            android:id="@+id/button_iap_large"
                            style="@style/IapButton.Portret"
                            android:text="@string/donate_large"/>

                    <Button
                            android:id="@+id/button_iap_medium"
                            style="@style/IapButton.Portret"
                            android:text="@string/donate_medium"/>
                    <Button
                            android:id="@+id/button_iap_small"
                            style="@style/IapButton.Portret"
                            android:text="@string/donate_small"/>
                </LinearLayout>
            </ScrollView>

            <View android:layout_width="match_parent"
                  android:layout_height="3dp"
                  android:background="@drawable/toolbar_dropshadow"/>
        </FrameLayout>
    </LinearLayout>

    <fragment
            android:id="@+id/fragment_drawer"
            android:layout_width="@dimen/menu_width"
            android:layout_height="match_parent"
            android:layout_gravity="left|start"
            android:name="com.dakare.radiorecord.app.MenuFragment"/>

</android.support.v4.widget.DrawerLayout>