<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:background="?attr/primary_background">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
                                       android:id="@+id/my_toolbar"
                                       android:layout_width="match_parent"
                                       android:layout_height="?attr/actionBarSize"
                                       android:background="?attr/toolbarColor"
                                       android:elevation="4dp"
                                       android:title="@string/settings_text"
                                       app:title="@string/settings_text"
                                       app:titleTextAppearance="@style/ToolbarTitle"
                                       android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                                       android:navigationIcon="?attr/toolbar_icon_back"
                                       app:navigationIcon="?attr/toolbar_icon_back" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/main_padding"
                android:paddingRight="@dimen/main_padding"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/theme_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/theme_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/settings_theme_text" />

                    <TextView
                        android:id="@+id/theme_secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/theme_main"
                        style="@style/SettingsSecondary" />
                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/quality_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/quality_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/setting_quality_text" />

                    <TextView
                        android:id="@+id/quality_secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/quality_main"
                        style="@style/SettingsSecondary" />
                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/music_metadata_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/metadata_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/music_metadata_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/metadata_main"
                        style="@style/SettingsSecondary"
                        android:text="@string/music_metadata_secondary" />

                    <CheckBox
                        android:id="@+id/music_metadata_checkbox"
                        android:background="@drawable/transparent"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />
                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/music_image_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/metadata_image_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/image_metadata_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/metadata_image_main"
                        style="@style/SettingsSecondary"
                        android:text="@string/image_metadata_secondary" />

                    <CheckBox
                        android:id="@+id/music_image_checkbox"
                        android:background="@drawable/transparent"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/eq_settings_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/eq_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/eq_settings_text" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/eq_main"
                        style="@style/SettingsSecondary"
                        android:text="@string/eq_settings_secondary" />

                    <CheckBox
                        android:id="@+id/eq_settings_checkbox"
                        android:layout_width="wrap_content"
                        android:background="@drawable/transparent"
                        android:focusable="false"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true" />

                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/download_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/download_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/setting_download_text" />

                    <TextView
                        android:id="@+id/download_secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/download_main"
                        style="@style/SettingsSecondary" />
                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/iap_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/iap_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/settings_iap_text" />

                    <TextView
                        android:id="@+id/iap_secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/iap_main"
                        android:text="@string/settings_iap_secondary"
                        style="@style/SettingsSecondary" />
                </RelativeLayout>

                <View style="@style/SettingsSeparator" />

                <RelativeLayout
                    android:id="@+id/ads_container"
                    style="@style/SettingsContainer">

                    <TextView
                        android:id="@+id/ads_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/SettingsPrimary"
                        android:text="@string/settings_ads_text" />

                    <TextView
                        android:id="@+id/ads_secondary"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/ads_main"
                        style="@style/SettingsSecondary" />
                </RelativeLayout>

            </LinearLayout>
        </ScrollView>

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@drawable/toolbar_dropshadow" />
    </FrameLayout>
</LinearLayout>